Sun Apr 14 00:36:33 1996  Sam Hartman  <hartmans@mit.edu>

	* pty-int.h: Don't include sys/wait.h here.

	* configure.in : Check for waitpid.

Sat Apr 13 18:58:43 1996  Sam Hartman  <hartmans@mit.edu>

	* cleanup.c (pty_cleanup): If we are doing a vhangup, then fork
 	and dissociate on hangup.  This makes the HP happy, because there
 	is no way to get rid of a controlling terminal besides setsid() on
 	the HP.

Sun Mar 24 19:59:14 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in : Do streams handling by deciding what modules to
 	push for each system.

	* init_slave.c (pty_initialize_slave): Better abstraction for
 	dealing with what modules get pushed on what streams system.
  	There is a list of modules controlled on a module-by-module basis
 	by configure.in, and the modules included in that list are pushed.

	* void_assoc.c: Duplicate comment from open_ctty.c explaining that
 	it's OK to call void_association twice, and giving the caviats
 	about setsid.

	* open_ctty.c (pty_open_ctty): Remove test to make sure /dev/tty
 	worked, so we can push the streams for the HP.

	* open_slave.c (pty_open_slave): Test to see if /dev/tty works
 	only after calling pty_initialize_slave.

Sat Mar 23 15:24:38 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in : Remove shadow passwords check because nothing in
 	libpty cares about the result; remove use of libkrb5, libkrb4,
 	libkadm; Check for _getpty

	* getpty.c (pty_getpty): Support _getpty for Irix; Irix has
 	/dev/ptmx, but it doesn't work correctly at all.  Also, Irix,
 	tends to create device nodes on the fly.

	* pty-int.h: No need to include sys/socket.h

Sat Feb 24 21:34:58 1996  Theodore Y. Ts'o  <tytso@dcl>

	* vhangup.c (ptyint_vhangup): Don't do call vhangup() if system
		doesn't have it.

Sat Jan 27 01:13:34 1996  Mark Eichin  <eichin@cygnus.com>

	* void_assoc.c (ptyint_void_association): if we don't have
	TIOCNOTTY (HP/UX 9 for example) don't try to use it.
